--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,16 @@ img {
     font-weight: 700;
 }
 
+.bear-logo {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    font-family: var(--font-heading);
+    font-size: 1.8rem;
+    color: var(--primary-color);
+    font-weight: 700;
+}
+
 .logo-icon {
     width: 50px;
     height: 50px;
